cli/cmd/proxy/read/test_config_dump.json
{
  "configs": [
    {
      "@type": "type.googleapis.com/envoy.admin.v3.BootstrapConfigDump",
      "bootstrap": {
        "node": {
          "id": "backend-658b679b45-d5xlb-backend-sidecar-proxy",
          "cluster": "backend",
          "metadata": {
            "partition": "default",
            "namespace": "default"
          },
          "user_agent_name": "envoy",
          "user_agent_build_version": {
            "version": {
              "major_number": 1,
              "minor_number": 22
            },
            "metadata": {
              "revision.status": "Clean",
              "ssl.version": "BoringSSL",
              "revision.sha": "dcd329a2e95b54f754b17aceca3f72724294b502",
              "build.type": "RELEASE"
            }
          },
          "extensions": [
            {
              "name": "envoy.filters.thrift.header_to_metadata",
              "category": "envoy.thrift_proxy.filters"
            },
            {
              "name": "envoy.filters.thrift.rate_limit",
              "category": "envoy.thrift_proxy.filters"
            },
            {
              "name": "envoy.filters.thrift.router",
              "category": "envoy.thrift_proxy.filters"
            },
            {
              "name": "envoy.request_id.uuid",
              "category": "envoy.request_id"
            },
            {
              "name": "dubbo",
              "category": "envoy.dubbo_proxy.protocols"
            },
            {
              "name": "envoy.filters.connection_pools.tcp.generic",
              "category": "envoy.upstreams"
            },
            {
              "name": "envoy.client_ssl_auth",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.echo",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.ext_authz",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.client_ssl_auth",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.connection_limit",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.direct_response",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.dubbo_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.echo",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.ext_authz",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.http_connection_manager",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.local_ratelimit",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.mongo_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.ratelimit",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.rbac",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.redis_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.sni_cluster",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.sni_dynamic_forward_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.tcp_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.thrift_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.wasm",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.zookeeper_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.http_connection_manager",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.mongo_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.ratelimit",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.redis_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.tcp_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.dynamic.ot",
              "category": "envoy.tracers"
            },
            {
              "name": "envoy.lightstep",
              "category": "envoy.tracers"
            },
            {
              "name": "envoy.tracers.datadog",
              "category": "envoy.tracers"
            },
            {
              "name": "envoy.tracers.dynamic_ot",
              "category": "envoy.tracers"
            },
            {
              "name": "envoy.tracers.lightstep",
              "category": "envoy.tracers"
            },
            {
              "name": "envoy.tracers.opencensus",
              "category": "envoy.tracers"
            },
            {
              "name": "envoy.tracers.skywalking",
              "category": "envoy.tracers"
            },
            {
              "name": "envoy.tracers.xray",
              "category": "envoy.tracers"
            },
            {
              "name": "envoy.tracers.zipkin",
              "category": "envoy.tracers"
            },
            {
              "name": "envoy.zipkin",
              "category": "envoy.tracers"
            },
            {
              "name": "envoy.cluster.eds",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.cluster.logical_dns",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.cluster.original_dst",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.cluster.static",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.cluster.strict_dns",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.clusters.aggregate",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.clusters.dynamic_forward_proxy",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.clusters.redis",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.tls.cert_validator.default",
              "category": "envoy.tls.cert_validator"
            },
            {
              "name": "envoy.tls.cert_validator.spiffe",
              "category": "envoy.tls.cert_validator"
            },
            {
              "name": "envoy.http.original_ip_detection.custom_header",
              "category": "envoy.http.original_ip_detection"
            },
            {
              "name": "envoy.http.original_ip_detection.xff",
              "category": "envoy.http.original_ip_detection"
            },
            {
              "name": "envoy.retry_priorities.previous_priorities",
              "category": "envoy.retry_priorities"
            },
            {
              "name": "envoy.filters.dubbo.router",
              "category": "envoy.dubbo_proxy.filters"
            },
            {
              "name": "envoy.filters.listener.http_inspector",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.filters.listener.original_dst",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.filters.listener.original_src",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.filters.listener.proxy_protocol",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.filters.listener.tls_inspector",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.http_inspector",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.original_dst",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.original_src",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.proxy_protocol",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.tls_inspector",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.compression.brotli.decompressor",
              "category": "envoy.compression.decompressor"
            },
            {
              "name": "envoy.compression.gzip.decompressor",
              "category": "envoy.compression.decompressor"
            },
            {
              "name": "envoy.compression.zstd.decompressor",
              "category": "envoy.compression.decompressor"
            },
            {
              "name": "envoy.internal_redirect_predicates.allow_listed_routes",
              "category": "envoy.internal_redirect_predicates"
            },
            {
              "name": "envoy.internal_redirect_predicates.previous_routes",
              "category": "envoy.internal_redirect_predicates"
            },
            {
              "name": "envoy.internal_redirect_predicates.safe_cross_scheme",
              "category": "envoy.internal_redirect_predicates"
            },
            {
              "name": "envoy.dog_statsd",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.graphite_statsd",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.metrics_service",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.stat_sinks.dog_statsd",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.stat_sinks.graphite_statsd",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.stat_sinks.hystrix",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.stat_sinks.metrics_service",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.stat_sinks.statsd",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.stat_sinks.wasm",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.statsd",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.access_loggers.file",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.access_loggers.http_grpc",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.access_loggers.open_telemetry",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.access_loggers.stderr",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.access_loggers.stdout",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.access_loggers.tcp_grpc",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.access_loggers.wasm",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.file_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.http_grpc_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.open_telemetry_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.stderr_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.stdout_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.tcp_grpc_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.wasm_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.filters.udp.dns_filter",
              "category": "envoy.filters.udp_listener"
            },
            {
              "name": "envoy.filters.udp_listener.udp_proxy",
              "category": "envoy.filters.udp_listener"
            },
            {
              "name": "envoy.access_loggers.extension_filters.cel",
              "category": "envoy.access_logger.extension_filters"
            },
            {
              "name": "envoy.key_value.file_based",
              "category": "envoy.common.key_value"
            },
            {
              "name": "envoy.rbac.matchers.upstream_ip_port",
              "category": "envoy.rbac.matchers"
            },
            {
              "name": "composite-action",
              "category": "envoy.matching.action"
            },
            {
              "name": "skip",
              "category": "envoy.matching.action"
            },
            {
              "name": "envoy.matching.common_inputs.environment_variable",
              "category": "envoy.matching.common_inputs"
            },
            {
              "name": "envoy.resource_monitors.fixed_heap",
              "category": "envoy.resource_monitors"
            },
            {
              "name": "envoy.resource_monitors.injected_resource",
              "category": "envoy.resource_monitors"
            },
            {
              "name": "envoy.watchdog.abort_action",
              "category": "envoy.guarddog_actions"
            },
            {
              "name": "envoy.watchdog.profile_action",
              "category": "envoy.guarddog_actions"
            },
            {
              "name": "default",
              "category": "network.connection.client"
            },
            {
              "name": "envoy_internal",
              "category": "network.connection.client"
            },
            {
              "name": "envoy.matching.custom_matchers.trie_matcher",
              "category": "envoy.matching.network.custom_matchers"
            },
            {
              "name": "envoy.bandwidth_limit",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.buffer",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.cors",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.csrf",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.ext_authz",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.ext_proc",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.fault",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.adaptive_concurrency",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.admission_control",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.alternate_protocols_cache",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.aws_lambda",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.aws_request_signing",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.bandwidth_limit",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.buffer",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.cache",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.cdn_loop",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.composite",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.compressor",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.cors",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.csrf",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.decompressor",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.dynamic_forward_proxy",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.dynamo",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.ext_authz",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.ext_proc",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.fault",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.gcp_authn",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.grpc_http1_bridge",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.grpc_http1_reverse_bridge",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.grpc_json_transcoder",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.grpc_stats",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.grpc_web",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.header_to_metadata",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.health_check",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.ip_tagging",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.jwt_authn",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.local_ratelimit",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.lua",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.oauth2",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.on_demand",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.original_src",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.ratelimit",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.rbac",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.router",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.set_metadata",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.stateful_session",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.tap",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.wasm",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.grpc_http1_bridge",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.grpc_json_transcoder",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.grpc_web",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.health_check",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.http_dynamo_filter",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.ip_tagging",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.local_rate_limit",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.lua",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.rate_limit",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.router",
              "category": "envoy.filters.http"
            },
            {
              "name": "match-wrapper",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.quic.crypto_stream.server.quiche",
              "category": "envoy.quic.server.crypto_stream"
            },
            {
              "name": "dubbo.hessian2",
              "category": "envoy.dubbo_proxy.serializers"
            },
            {
              "name": "envoy.wasm.runtime.null",
              "category": "envoy.wasm.runtime"
            },
            {
              "name": "envoy.wasm.runtime.v8",
              "category": "envoy.wasm.runtime"
            },
            {
              "name": "envoy.matching.inputs.application_protocol",
              "category": "envoy.matching.network.input"
            },
            {
              "name": "envoy.matching.inputs.destination_ip",
              "category": "envoy.matching.network.input"
            },
            {
              "name": "envoy.matching.inputs.destination_port",
              "category": "envoy.matching.network.input"
            },
            {
              "name": "envoy.matching.inputs.direct_source_ip",
              "category": "envoy.matching.network.input"
            },
            {
              "name": "envoy.matching.inputs.server_name",
              "category": "envoy.matching.network.input"
            },
            {
              "name": "envoy.matching.inputs.source_ip",
              "category": "envoy.matching.network.input"
            },
            {
              "name": "envoy.matching.inputs.source_port",
              "category": "envoy.matching.network.input"
            },
            {
              "name": "envoy.matching.inputs.source_type",
              "category": "envoy.matching.network.input"
            },
            {
              "name": "envoy.matching.inputs.transport_protocol",
              "category": "envoy.matching.network.input"
            },
            {
              "name": "envoy.matching.matchers.consistent_hashing",
              "category": "envoy.matching.input_matchers"
            },
            {
              "name": "envoy.matching.matchers.ip",
              "category": "envoy.matching.input_matchers"
            },
            {
              "name": "preserve_case",
              "category": "envoy.http.stateful_header_formatters"
            },
            {
              "name": "envoy.config.validators.minimum_clusters",
              "category": "envoy.config.validators"
            },
            {
              "name": "envoy.config.validators.minimum_clusters_validator",
              "category": "envoy.config.validators"
            },
            {
              "name": "envoy.bootstrap.internal_listener",
              "category": "envoy.bootstrap"
            },
            {
              "name": "envoy.bootstrap.wasm",
              "category": "envoy.bootstrap"
            },
            {
              "name": "envoy.extensions.network.socket_interface.default_socket_interface",
              "category": "envoy.bootstrap"
            },
            {
              "name": "envoy.grpc_credentials.aws_iam",
              "category": "envoy.grpc_credentials"
            },
            {
              "name": "envoy.grpc_credentials.default",
              "category": "envoy.grpc_credentials"
            },
            {
              "name": "envoy.grpc_credentials.file_based_metadata",
              "category": "envoy.grpc_credentials"
            },
            {
              "name": "envoy.rate_limit_descriptors.expr",
              "category": "envoy.rate_limit_descriptors"
            },
            {
              "name": "auto",
              "category": "envoy.thrift_proxy.transports"
            },
            {
              "name": "framed",
              "category": "envoy.thrift_proxy.transports"
            },
            {
              "name": "header",
              "category": "envoy.thrift_proxy.transports"
            },
            {
              "name": "unframed",
              "category": "envoy.thrift_proxy.transports"
            },
            {
              "name": "envoy.compression.brotli.compressor",
              "category": "envoy.compression.compressor"
            },
            {
              "name": "envoy.compression.gzip.compressor",
              "category": "envoy.compression.compressor"
            },
            {
              "name": "envoy.compression.zstd.compressor",
              "category": "envoy.compression.compressor"
            },
            {
              "name": "envoy.network.dns_resolver.cares",
              "category": "envoy.network.dns_resolver"
            },
            {
              "name": "envoy.health_checkers.redis",
              "category": "envoy.health_checkers"
            },
            {
              "name": "envoy.ip",
              "category": "envoy.resolvers"
            },
            {
              "name": "envoy.transport_sockets.alts",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "envoy.transport_sockets.quic",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "envoy.transport_sockets.raw_buffer",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "envoy.transport_sockets.starttls",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "envoy.transport_sockets.tap",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "envoy.transport_sockets.tcp_stats",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "envoy.transport_sockets.tls",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "raw_buffer",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "starttls",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "tls",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "envoy.formatter.metadata",
              "category": "envoy.formatter"
            },
            {
              "name": "envoy.formatter.req_without_query",
              "category": "envoy.formatter"
            },
            {
              "name": "auto",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "binary",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "binary/non-strict",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "compact",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "twitter",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "envoy.extensions.http.cache.simple",
              "category": "envoy.http.cache"
            },
            {
              "name": "envoy.quic.proof_source.filter_chain",
              "category": "envoy.quic.proof_source"
            },
            {
              "name": "default",
              "category": "envoy.dubbo_proxy.route_matchers"
            },
            {
              "name": "envoy.transport_sockets.alts",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "envoy.transport_sockets.quic",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "envoy.transport_sockets.raw_buffer",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "envoy.transport_sockets.starttls",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "envoy.transport_sockets.tap",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "envoy.transport_sockets.tcp_stats",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "envoy.transport_sockets.tls",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "envoy.transport_sockets.upstream_proxy_protocol",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "raw_buffer",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "starttls",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "tls",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "envoy.http.stateful_session.cookie",
              "category": "envoy.http.stateful_session"
            },
            {
              "name": "envoy.retry_host_predicates.omit_canary_hosts",
              "category": "envoy.retry_host_predicates"
            },
            {
              "name": "envoy.retry_host_predicates.omit_host_metadata",
              "category": "envoy.retry_host_predicates"
            },
            {
              "name": "envoy.retry_host_predicates.previous_hosts",
              "category": "envoy.retry_host_predicates"
            },
            {
              "name": "envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
              "category": "envoy.upstream_options"
            },
            {
              "name": "envoy.upstreams.http.http_protocol_options",
              "category": "envoy.upstream_options"
            },
            {
              "name": "envoy.matching.inputs.request_headers",
              "category": "envoy.matching.http.input"
            },
            {
              "name": "envoy.matching.inputs.request_trailers",
              "category": "envoy.matching.http.input"
            },
            {
              "name": "envoy.matching.inputs.response_headers",
              "category": "envoy.matching.http.input"
            },
            {
              "name": "envoy.matching.inputs.response_trailers",
              "category": "envoy.matching.http.input"
            }
          ]
        },
        "static_resources": {
          "clusters": [
            {
              "name": "local_agent",
              "type": "STATIC",
              "connect_timeout": "1s",
              "http2_protocol_options": {},
              "transport_socket": {
                "name": "tls",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                  "common_tls_context": {
                    "validation_context": {
                      "trusted_ca": {
                        "inline_string": "-----BEGIN CERTIFICATE-----\nMIIDQTCCAuigAwIBAgIUH1N2/59JC/WVKUx81/tPZhzvkbowCgYIKoZIzj0EAwIw\ngZExCzAJBgNVBAYTAlVTMQswCQYDVQQIEwJDQTEWMBQGA1UEBxMNU2FuIEZyYW5j\naXNjbzEaMBgGA1UECRMRMTAxIFNlY29uZCBTdHJlZXQxDjAMBgNVBBETBTk0MTA1\nMRcwFQYDVQQKEw5IYXNoaUNvcnAgSW5jLjEYMBYGA1UEAxMPQ29uc3VsIEFnZW50\nIENBMB4XDTIyMDUxMzA0MTYyMVoXDTMyMDUxMDA0MTcyMVowgZExCzAJBgNVBAYT\nAlVTMQswCQYDVQQIEwJDQTEWMBQGA1UEBxMNU2FuIEZyYW5jaXNjbzEaMBgGA1UE\nCRMRMTAxIFNlY29uZCBTdHJlZXQxDjAMB [...]
                      }
                    }
                  }
                }
              },
              "load_assignment": {
                "cluster_name": "local_agent",
                "endpoints": [
                  {
                    "lb_endpoints": [
                      {
                        "endpoint": {
                          "address": {
                            "socket_address": {
                              "address": "192.168.79.187",
                              "port_value": 8502
                            }
                          }
                        }
                      }
                    ]
                  }
                ]
              }
            }
          ]
        },
        "dynamic_resources": {
          "lds_config": {
            "ads": {},
            "resource_api_version": "V3"
          },
          "cds_config": {
            "ads": {},
            "resource_api_version": "V3"
          },
          "ads_config": {
            "api_type": "DELTA_GRPC",
            "grpc_services": [
              {
                "envoy_grpc": {
                  "cluster_name": "local_agent"
                },
                "initial_metadata": [
                  {
                    "key": "x-consul-token"
                  }
                ]
              }
            ],
            "transport_api_version": "V3"
          }
        },
        "admin": {
          "access_log_path": "/dev/null",
          "address": {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 19000
            }
          }
        },
        "stats_config": {
          "stats_tags": [
            {
              "tag_name": "consul.destination.custom_hash",
              "regex": "^cluster\\.(?:passthrough~)?((?:([^.]+)~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?[^.]+\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.destination.service_subset",
              "regex": "^cluster\\.(?:passthrough~)?((?:[^.]+~)?(?:([^.]+)\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?[^.]+\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.destination.service",
              "regex": "^cluster\\.(?:passthrough~)?((?:[^.]+~)?(?:[^.]+\\.)?([^.]+)\\.[^.]+\\.(?:[^.]+\\.)?[^.]+\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.destination.namespace",
              "regex": "^cluster\\.(?:passthrough~)?((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.([^.]+)\\.(?:[^.]+\\.)?[^.]+\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.destination.partition",
              "regex": "^cluster\\.(?:passthrough~)?((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:([^.]+)\\.)?[^.]+\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.destination.datacenter",
              "regex": "^cluster\\.(?:passthrough~)?((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?([^.]+)\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.destination.routing_type",
              "regex": "^cluster\\.(?:passthrough~)?((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?[^.]+\\.([^.]+)\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.destination.trust_domain",
              "regex": "^cluster\\.(?:passthrough~)?((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?[^.]+\\.[^.]+\\.([^.]+)\\.consul\\.)"
            },
            {
              "tag_name": "consul.destination.target",
              "regex": "^cluster\\.(?:passthrough~)?(((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?[^.]+)\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.destination.full_target",
              "regex": "^cluster\\.(?:passthrough~)?(((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?[^.]+\\.[^.]+\\.[^.]+)\\.consul\\.)"
            },
            {
              "tag_name": "consul.upstream.service",
              "regex": "^(?:tcp|http)\\.upstream\\.(([^.]+)(?:\\.[^.]+)?(?:\\.[^.]+)?\\.[^.]+\\.)"
            },
            {
              "tag_name": "consul.upstream.datacenter",
              "regex": "^(?:tcp|http)\\.upstream\\.([^.]+(?:\\.[^.]+)?(?:\\.[^.]+)?\\.([^.]+)\\.)"
            },
            {
              "tag_name": "consul.upstream.namespace",
              "regex": "^(?:tcp|http)\\.upstream\\.([^.]+(?:\\.([^.]+))?(?:\\.[^.]+)?\\.[^.]+\\.)"
            },
            {
              "tag_name": "consul.upstream.partition",
              "regex": "^(?:tcp|http)\\.upstream\\.([^.]+(?:\\.[^.]+)?(?:\\.([^.]+))?\\.[^.]+\\.)"
            },
            {
              "tag_name": "consul.custom_hash",
              "regex": "^cluster\\.((?:([^.]+)~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?[^.]+\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.service_subset",
              "regex": "^cluster\\.((?:[^.]+~)?(?:([^.]+)\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?[^.]+\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.service",
              "regex": "^cluster\\.((?:[^.]+~)?(?:[^.]+\\.)?([^.]+)\\.[^.]+\\.(?:[^.]+\\.)?[^.]+\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.namespace",
              "regex": "^cluster\\.((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.([^.]+)\\.(?:[^.]+\\.)?[^.]+\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.datacenter",
              "regex": "^cluster\\.((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?([^.]+)\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.routing_type",
              "regex": "^cluster\\.((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?[^.]+\\.([^.]+)\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.trust_domain",
              "regex": "^cluster\\.((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?[^.]+\\.[^.]+\\.([^.]+)\\.consul\\.)"
            },
            {
              "tag_name": "consul.target",
              "regex": "^cluster\\.(((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?[^.]+)\\.[^.]+\\.[^.]+\\.consul\\.)"
            },
            {
              "tag_name": "consul.full_target",
              "regex": "^cluster\\.(((?:[^.]+~)?(?:[^.]+\\.)?[^.]+\\.[^.]+\\.(?:[^.]+\\.)?[^.]+\\.[^.]+\\.[^.]+)\\.consul\\.)"
            },
            {
              "tag_name": "local_cluster",
              "fixed_value": "backend"
            },
            {
              "tag_name": "consul.source.service",
              "fixed_value": "backend"
            },
            {
              "tag_name": "consul.source.namespace",
              "fixed_value": "default"
            },
            {
              "tag_name": "consul.source.partition",
              "fixed_value": "default"
            },
            {
              "tag_name": "consul.source.datacenter",
              "fixed_value": "dc1"
            }
          ],
          "use_all_default_tags": true
        }
      },
      "last_updated": "2022-05-13T04:22:39.488Z"
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ClustersConfigDump",
      "static_clusters": [
        {
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "local_agent",
            "type": "STATIC",
            "connect_timeout": "1s",
            "http2_protocol_options": {},
            "transport_socket": {
              "name": "tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                "common_tls_context": {
                  "validation_context": {
                    "trusted_ca": {
                      "inline_string": "-----BEGIN CERTIFICATE-----\nMIIDQTCCAuigAwIBAgIUH1N2/59JC/WVKUx81/tPZhzvkbowCgYIKoZIzj0EAwIw\ngZExCzAJBgNVBAYTAlVTMQswCQYDVQQIEwJDQTEWMBQGA1UEBxMNU2FuIEZyYW5j\naXNjbzEaMBgGA1UECRMRMTAxIFNlY29uZCBTdHJlZXQxDjAMBgNVBBETBTk0MTA1\nMRcwFQYDVQQKEw5IYXNoaUNvcnAgSW5jLjEYMBYGA1UEAxMPQ29uc3VsIEFnZW50\nIENBMB4XDTIyMDUxMzA0MTYyMVoXDTMyMDUxMDA0MTcyMVowgZExCzAJBgNVBAYT\nAlVTMQswCQYDVQQIEwJDQTEWMBQGA1UEBxMNU2FuIEZyYW5jaXNjbzEaMBgGA1UE\nCRMRMTAxIFNlY29uZCBTdHJlZXQxDjAMBgN [...]
                    }
                  }
                }
              }
            },
            "load_assignment": {
              "cluster_name": "local_agent",
              "endpoints": [
                {
                  "lb_endpoints": [
                    {
                      "endpoint": {
                        "address": {
                          "socket_address": {
                            "address": "192.168.79.187",
                            "port_value": 8502
                          }
                        }
                      }
                    }
                  ]
                }
              ]
            }
          },
          "last_updated": "2022-05-13T04:22:39.553Z"
        }
      ],
      "dynamic_active_clusters": [
        {
          "version_info": "877646fa9c433fbe25febc99b0725a44ab606d9f5407b76a6b7513edd1ac8af2",
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "client.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul",
            "type": "EDS",
            "eds_cluster_config": {
              "eds_config": {
                "ads": {},
                "resource_api_version": "V3"
              }
            },
            "connect_timeout": "5s",
            "circuit_breakers": {},
            "outlier_detection": {},
            "transport_socket": {
              "name": "tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                "common_tls_context": {
                  "tls_params": {},
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "inline_string": "-----BEGIN CERTIFICATE-----\nMIICHDCCAcGgAwIBAgIBWDAKBggqhkjOPQQDAjAxMS8wLQYDVQQDEyZwcmktNDl4\ncnFxejQuY29uc3VsLmNhLmJjMzgxNWMyLmNvbnN1bDAeFw0yMjA2MDkwMDM4MTJa\nFw0yMjA2MTIwMDM4MTJaMAAwWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAARGkJfg\n3Hy48dvsqnsJ7Xmb00ZGzNaGl89++zg3PgppbvXiU+u3oK7qON/pQ3hinsjXnubr\n2y5RRaKjRke+HyTBo4H6MIH3MA4GA1UdDwEB/wQEAwIDuDAdBgNVHSUEFjAUBggr\nBgEFBQcDAgYIKwYBBQUHAwEwDAYDVR0TAQH/BAIwADApBgNVHQ4EIgQgJK3rY8+n\n0pg4r+1+uIsBl2YqMXGTQdZ45yR8lDILX [...]
                      },
                      "private_key": {
                        "inline_string": "[redacted]"
                      }
                    }
                  ],
                  "validation_context": {
                    "trusted_ca": {
                      "inline_string": "-----BEGIN CERTIFICATE-----\nMIICEDCCAbWgAwIBAgIBBzAKBggqhkjOPQQDAjAxMS8wLQYDVQQDEyZwcmktNDl4\ncnFxejQuY29uc3VsLmNhLmJjMzgxNWMyLmNvbnN1bDAeFw0yMjA1MTMwNDE4MDBa\nFw0zMjA1MTAwNDE4MDBaMDExLzAtBgNVBAMTJnByaS00OXhycXF6NC5jb25zdWwu\nY2EuYmMzODE1YzIuY29uc3VsMFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEwQHp\nkEZUr0LVB1ng/zQMQyEQnID/wN/0+Ve648F3Lz4+S7D/S41EQ1Q9ImrNGIlmJ1b2\ncL9WcsL1A1/Ts8xNSaOBvTCBujAOBgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUw\nAwEB/zApBgNVHQ4EIgQg1Fr3vJvXDnVWt0y [...]
                    },
                    "match_subject_alt_names": [
                      {
                        "exact": "spiffe://bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul/ns/default/dc/dc1/svc/client"
                      }
                    ]
                  }
                },
                "sni": "client.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul"
              }
            },
            "common_lb_config": {
              "healthy_panic_threshold": {}
            },
            "alt_stat_name": "client.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul"
          },
          "last_updated": "2022-06-09T00:39:12.948Z"
        },
        {
          "version_info": "e0cc5c279829d13f01d2ba3a4d32546c0d3fc65b930bbb0bf66a68ad76e152a0",
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "frontend.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul",
            "type": "EDS",
            "eds_cluster_config": {
              "eds_config": {
                "ads": {},
                "resource_api_version": "V3"
              }
            },
            "connect_timeout": "5s",
            "circuit_breakers": {},
            "outlier_detection": {},
            "transport_socket": {
              "name": "tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                "common_tls_context": {
                  "tls_params": {},
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "inline_string": "-----BEGIN CERTIFICATE-----\nMIICHDCCAcGgAwIBAgIBWDAKBggqhkjOPQQDAjAxMS8wLQYDVQQDEyZwcmktNDl4\ncnFxejQuY29uc3VsLmNhLmJjMzgxNWMyLmNvbnN1bDAeFw0yMjA2MDkwMDM4MTJa\nFw0yMjA2MTIwMDM4MTJaMAAwWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAARGkJfg\n3Hy48dvsqnsJ7Xmb00ZGzNaGl89++zg3PgppbvXiU+u3oK7qON/pQ3hinsjXnubr\n2y5RRaKjRke+HyTBo4H6MIH3MA4GA1UdDwEB/wQEAwIDuDAdBgNVHSUEFjAUBggr\nBgEFBQcDAgYIKwYBBQUHAwEwDAYDVR0TAQH/BAIwADApBgNVHQ4EIgQgJK3rY8+n\n0pg4r+1+uIsBl2YqMXGTQdZ45yR8lDILX [...]
                      },
                      "private_key": {
                        "inline_string": "[redacted]"
                      }
                    }
                  ],
                  "validation_context": {
                    "trusted_ca": {
                      "inline_string": "-----BEGIN CERTIFICATE-----\nMIICEDCCAbWgAwIBAgIBBzAKBggqhkjOPQQDAjAxMS8wLQYDVQQDEyZwcmktNDl4\ncnFxejQuY29uc3VsLmNhLmJjMzgxNWMyLmNvbnN1bDAeFw0yMjA1MTMwNDE4MDBa\nFw0zMjA1MTAwNDE4MDBaMDExLzAtBgNVBAMTJnByaS00OXhycXF6NC5jb25zdWwu\nY2EuYmMzODE1YzIuY29uc3VsMFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEwQHp\nkEZUr0LVB1ng/zQMQyEQnID/wN/0+Ve648F3Lz4+S7D/S41EQ1Q9ImrNGIlmJ1b2\ncL9WcsL1A1/Ts8xNSaOBvTCBujAOBgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUw\nAwEB/zApBgNVHQ4EIgQg1Fr3vJvXDnVWt0y [...]
                    },
                    "match_subject_alt_names": [
                      {
                        "exact": "spiffe://bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul/ns/default/dc/dc1/svc/frontend"
                      }
                    ]
                  }
                },
                "sni": "frontend.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul"
              }
            },
            "common_lb_config": {
              "healthy_panic_threshold": {}
            },
            "alt_stat_name": "frontend.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul"
          },
          "last_updated": "2022-06-09T00:39:12.855Z"
        },
        {
          "version_info": "642b6322013fd3f776d9644ece515db5c4901fe6a87575ab4ff07498ab5faa47",
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "local_app",
            "type": "STATIC",
            "connect_timeout": "5s",
            "load_assignment": {
              "cluster_name": "local_app",
              "endpoints": [
                {
                  "lb_endpoints": [
                    {
                      "endpoint": {
                        "address": {
                          "socket_address": {
                            "address": "127.0.0.1",
                            "port_value": 8080
                          }
                        }
                      }
                    }
                  ]
                }
              ]
            }
          },
          "last_updated": "2022-05-13T04:22:39.655Z"
        },
        {
          "version_info": "dcd8d0247ba0149bfdc151428353b3f29d0665bf5c12af6a105a0abcc5af40ac",
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "original-destination",
            "type": "ORIGINAL_DST",
            "connect_timeout": "5s",
            "lb_policy": "CLUSTER_PROVIDED"
          },
          "last_updated": "2022-05-13T04:22:39.743Z"
        },
        {
          "version_info": "1454ffe616e7abd2b3bec548b88f3a14c0500a94de27f2b3e8e3913e7bfd3275",
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "server.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul",
            "type": "EDS",
            "eds_cluster_config": {
              "eds_config": {
                "ads": {},
                "resource_api_version": "V3"
              }
            },
            "connect_timeout": "5s",
            "circuit_breakers": {},
            "outlier_detection": {},
            "transport_socket": {
              "name": "tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                "common_tls_context": {
                  "tls_params": {},
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "inline_string": "-----BEGIN CERTIFICATE-----\nMIICHDCCAcGgAwIBAgIBWDAKBggqhkjOPQQDAjAxMS8wLQYDVQQDEyZwcmktNDl4\ncnFxejQuY29uc3VsLmNhLmJjMzgxNWMyLmNvbnN1bDAeFw0yMjA2MDkwMDM4MTJa\nFw0yMjA2MTIwMDM4MTJaMAAwWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAARGkJfg\n3Hy48dvsqnsJ7Xmb00ZGzNaGl89++zg3PgppbvXiU+u3oK7qON/pQ3hinsjXnubr\n2y5RRaKjRke+HyTBo4H6MIH3MA4GA1UdDwEB/wQEAwIDuDAdBgNVHSUEFjAUBggr\nBgEFBQcDAgYIKwYBBQUHAwEwDAYDVR0TAQH/BAIwADApBgNVHQ4EIgQgJK3rY8+n\n0pg4r+1+uIsBl2YqMXGTQdZ45yR8lDILX [...]
                      },
                      "private_key": {
                        "inline_string": "[redacted]"
                      }
                    }
                  ],
                  "validation_context": {
                    "trusted_ca": {
                      "inline_string": "-----BEGIN CERTIFICATE-----\nMIICEDCCAbWgAwIBAgIBBzAKBggqhkjOPQQDAjAxMS8wLQYDVQQDEyZwcmktNDl4\ncnFxejQuY29uc3VsLmNhLmJjMzgxNWMyLmNvbnN1bDAeFw0yMjA1MTMwNDE4MDBa\nFw0zMjA1MTAwNDE4MDBaMDExLzAtBgNVBAMTJnByaS00OXhycXF6NC5jb25zdWwu\nY2EuYmMzODE1YzIuY29uc3VsMFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEwQHp\nkEZUr0LVB1ng/zQMQyEQnID/wN/0+Ve648F3Lz4+S7D/S41EQ1Q9ImrNGIlmJ1b2\ncL9WcsL1A1/Ts8xNSaOBvTCBujAOBgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUw\nAwEB/zApBgNVHQ4EIgQg1Fr3vJvXDnVWt0y [...]
                    },
                    "match_subject_alt_names": [
                      {
                        "exact": "spiffe://bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul/ns/default/dc/dc1/svc/server"
                      }
                    ]
                  }
                },
                "sni": "server.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul"
              }
            },
            "common_lb_config": {
              "healthy_panic_threshold": {}
            },
            "alt_stat_name": "server.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul"
          },
          "last_updated": "2022-06-09T00:39:12.754Z"
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.EndpointsConfigDump",
      "static_endpoint_configs": [
        {
          "endpoint_config": {
            "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
            "cluster_name": "local_agent",
            "endpoints": [
              {
                "locality": {},
                "lb_endpoints": [
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "192.168.79.187",
                          "port_value": 8502
                        }
                      },
                      "health_check_config": {}
                    },
                    "health_status": "HEALTHY",
                    "load_balancing_weight": 1
                  }
                ]
              }
            ],
            "policy": {
              "overprovisioning_factor": 140
            }
          }
        }
      ],
      "dynamic_endpoint_configs": [
        {
          "endpoint_config": {
            "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
            "cluster_name": "local_app",
            "endpoints": [
              {
                "locality": {},
                "lb_endpoints": [
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "127.0.0.1",
                          "port_value": 8080
                        }
                      },
                      "health_check_config": {}
                    },
                    "health_status": "HEALTHY",
                    "load_balancing_weight": 1
                  }
                ]
              }
            ],
            "policy": {
              "overprovisioning_factor": 140
            }
          }
        },
        {
          "endpoint_config": {
            "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
            "endpoints": [
              {
                "locality": {},
                "lb_endpoints": [
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "192.168.31.201",
                          "port_value": 20000
                        }
                      },
                      "health_check_config": {}
                    },
                    "health_status": "HEALTHY",
                    "load_balancing_weight": 1
                  },
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "192.168.47.235",
                          "port_value": 20000
                        }
                      },
                      "health_check_config": {}
                    },
                    "health_status": "HEALTHY",
                    "load_balancing_weight": 1
                  },
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "192.168.71.254",
                          "port_value": 20000
                        }
                      },
                      "health_check_config": {}
                    },
                    "health_status": "HEALTHY",
                    "load_balancing_weight": 1
                  }
                ]
              }
            ],
            "policy": {
              "overprovisioning_factor": 140
            }
          }
        },
        {
          "endpoint_config": {
            "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
            "endpoints": [
              {
                "locality": {},
                "lb_endpoints": [
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "192.168.63.120",
                          "port_value": 20000
                        }
                      },
                      "health_check_config": {}
                    },
                    "health_status": "HEALTHY",
                    "load_balancing_weight": 1
                  }
                ]
              }
            ],
            "policy": {
              "overprovisioning_factor": 140
            }
          }
        },
        {
          "endpoint_config": {
            "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
            "endpoints": [
              {
                "locality": {},
                "lb_endpoints": [
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "192.168.18.110",
                          "port_value": 20000
                        }
                      },
                      "health_check_config": {}
                    },
                    "health_status": "HEALTHY",
                    "load_balancing_weight": 1
                  },
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "192.168.52.101",
                          "port_value": 20000
                        }
                      },
                      "health_check_config": {}
                    },
                    "health_status": "HEALTHY",
                    "load_balancing_weight": 1
                  },
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "192.168.65.131",
                          "port_value": 20000
                        }
                      },
                      "health_check_config": {}
                    },
                    "health_status": "HEALTHY",
                    "load_balancing_weight": 1
                  }
                ]
              }
            ],
            "policy": {
              "overprovisioning_factor": 140
            }
          }
        },
        {
          "endpoint_config": {
            "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
            "cluster_name": "original-destination",
            "policy": {
              "overprovisioning_factor": 140
            }
          }
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
      "dynamic_listeners": [
        {
          "name": "public_listener:192.168.69.179:20000",
          "active_state": {
            "version_info": "42e63fea110536be20b84ab28ef1979efb5e20b967a752b8834314c4fcd58358",
            "listener": {
              "@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
              "name": "public_listener:192.168.69.179:20000",
              "address": {
                "socket_address": {
                  "address": "192.168.69.179",
                  "port_value": 20000
                }
              },
              "filter_chains": [
                {
                  "filters": [
                    {
                      "name": "envoy.filters.network.http_connection_manager",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                        "stat_prefix": "public_listener",
                        "route_config": {
                          "name": "public_listener",
                          "virtual_hosts": [
                            {
                              "name": "public_listener",
                              "domains": ["*"],
                              "routes": [
                                {
                                  "match": {
                                    "prefix": "/"
                                  },
                                  "route": {
                                    "cluster": "local_app"
                                  }
                                }
                              ]
                            }
                          ]
                        },
                        "http_filters": [
                          {
                            "name": "envoy.filters.http.rbac",
                            "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC",
                              "rules": {
                                "action": "DENY",
                                "policies": {
                                  "consul-intentions-layer4": {
                                    "permissions": [
                                      {
                                        "any": true
                                      }
                                    ],
                                    "principals": [
                                      {
                                        "authenticated": {
                                          "principal_name": {
                                            "safe_regex": {
                                              "google_re2": {},
                                              "regex": "^spiffe://[^/]+/ns/default/dc/[^/]+/svc/client$"
                                            }
                                          }
                                        }
                                      }
                                    ]
                                  }
                                }
                              }
                            }
                          },
                          {
                            "name": "envoy.filters.http.router",
                            "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                            }
                          }
                        ],
                        "tracing": {
                          "random_sampling": {}
                        }
                      }
                    }
                  ],
                  "transport_socket": {
                    "name": "tls",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                      "common_tls_context": {
                        "tls_params": {},
                        "tls_certificates": [
                          {
                            "certificate_chain": {
                              "inline_string": "-----BEGIN CERTIFICATE-----\nMIICHDCCAcGgAwIBAgIBWDAKBggqhkjOPQQDAjAxMS8wLQYDVQQDEyZwcmktNDl4\ncnFxejQuY29uc3VsLmNhLmJjMzgxNWMyLmNvbnN1bDAeFw0yMjA2MDkwMDM4MTJa\nFw0yMjA2MTIwMDM4MTJaMAAwWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAARGkJfg\n3Hy48dvsqnsJ7Xmb00ZGzNaGl89++zg3PgppbvXiU+u3oK7qON/pQ3hinsjXnubr\n2y5RRaKjRke+HyTBo4H6MIH3MA4GA1UdDwEB/wQEAwIDuDAdBgNVHSUEFjAUBggr\nBgEFBQcDAgYIKwYBBQUHAwEwDAYDVR0TAQH/BAIwADApBgNVHQ4EIgQgJK3rY8+n\n0pg4r+1+uIsBl2YqMXGTQdZ45yR [...]
                            },
                            "private_key": {
                              "inline_string": "[redacted]"
                            }
                          }
                        ],
                        "validation_context": {
                          "trusted_ca": {
                            "inline_string": "-----BEGIN CERTIFICATE-----\nMIICEDCCAbWgAwIBAgIBBzAKBggqhkjOPQQDAjAxMS8wLQYDVQQDEyZwcmktNDl4\ncnFxejQuY29uc3VsLmNhLmJjMzgxNWMyLmNvbnN1bDAeFw0yMjA1MTMwNDE4MDBa\nFw0zMjA1MTAwNDE4MDBaMDExLzAtBgNVBAMTJnByaS00OXhycXF6NC5jb25zdWwu\nY2EuYmMzODE1YzIuY29uc3VsMFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEwQHp\nkEZUr0LVB1ng/zQMQyEQnID/wN/0+Ve648F3Lz4+S7D/S41EQ1Q9ImrNGIlmJ1b2\ncL9WcsL1A1/Ts8xNSaOBvTCBujAOBgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUw\nAwEB/zApBgNVHQ4EIgQg1Fr3vJvXD [...]
                          }
                        }
                      },
                      "require_client_certificate": true
                    }
                  }
                }
              ],
              "traffic_direction": "INBOUND"
            },
            "last_updated": "2022-06-09T00:39:27.668Z"
          }
        },
        {
          "name": "outbound_listener:127.0.0.1:15001",
          "active_state": {
            "version_info": "2bce2cd7828d5b1adbd820824ce6948fdaa00b4c824cba5ba0932aea95b7f5cd",
            "listener": {
              "@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
              "name": "outbound_listener:127.0.0.1:15001",
              "address": {
                "socket_address": {
                  "address": "127.0.0.1",
                  "port_value": 15001
                }
              },
              "filter_chains": [
                {
                  "filter_chain_match": {
                    "prefix_ranges": [
                      {
                        "address_prefix": "10.100.134.173",
                        "prefix_len": 32
                      },
                      {
                        "address_prefix": "240.0.0.3",
                        "prefix_len": 32
                      }
                    ]
                  },
                  "filters": [
                    {
                      "name": "envoy.filters.network.tcp_proxy",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                        "stat_prefix": "upstream.client.default.default.dc1",
                        "cluster": "client.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul"
                      }
                    }
                  ]
                },
                {
                  "filter_chain_match": {
                    "prefix_ranges": [
                      {
                        "address_prefix": "10.100.254.176",
                        "prefix_len": 32
                      },
                      {
                        "address_prefix": "240.0.0.4",
                        "prefix_len": 32
                      }
                    ]
                  },
                  "filters": [
                    {
                      "name": "envoy.filters.network.http_connection_manager",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                        "stat_prefix": "upstream.server.default.default.dc1",
                        "route_config": {
                          "name": "server",
                          "virtual_hosts": [
                            {
                              "name": "server.default.default.dc1",
                              "domains": ["*"],
                              "routes": [
                                {
                                  "match": {
                                    "prefix": "/"
                                  },
                                  "route": {
                                    "cluster": "server.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul"
                                  }
                                }
                              ]
                            }
                          ]
                        },
                        "http_filters": [
                          {
                            "name": "envoy.filters.http.router",
                            "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                            }
                          }
                        ],
                        "tracing": {
                          "random_sampling": {}
                        }
                      }
                    }
                  ]
                },
                {
                  "filter_chain_match": {
                    "prefix_ranges": [
                      {
                        "address_prefix": "10.100.31.2",
                        "prefix_len": 32
                      },
                      {
                        "address_prefix": "240.0.0.2",
                        "prefix_len": 32
                      }
                    ]
                  },
                  "filters": [
                    {
                      "name": "envoy.filters.network.tcp_proxy",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                        "stat_prefix": "upstream.frontend.default.default.dc1",
                        "cluster": "frontend.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul"
                      }
                    }
                  ]
                },
                {
                  "filters": [
                    {
                      "name": "envoy.filters.network.tcp_proxy",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                        "stat_prefix": "upstream.original-destination",
                        "cluster": "original-destination"
                      }
                    }
                  ]
                }
              ],
              "listener_filters": [
                {
                  "name": "envoy.filters.listener.original_dst",
                  "typed_config": {
                    "@type": "type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst"
                  }
                }
              ],
              "traffic_direction": "OUTBOUND"
            },
            "last_updated": "2022-05-24T17:41:59.079Z"
          }
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ScopedRoutesConfigDump"
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
      "static_route_configs": [
        {
          "route_config": {
            "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
            "name": "public_listener",
            "virtual_hosts": [
              {
                "name": "public_listener",
                "domains": ["*"],
                "routes": [
                  {
                    "match": {
                      "prefix": "/"
                    },
                    "route": {
                      "cluster": "local_app"
                    }
                  }
                ]
              }
            ]
          },
          "last_updated": "2022-06-09T00:39:27.667Z"
        },
        {
          "route_config": {
            "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
            "name": "server",
            "virtual_hosts": [
              {
                "name": "server.default.default.dc1",
                "domains": ["*"],
                "routes": [
                  {
                    "match": {
                      "prefix": "/"
                    },
                    "route": {
                      "cluster": "server.default.dc1.internal.bc3815c2-1a0f-f3ff-a2e9-20d791f08d00.consul"
                    }
                  }
                ]
              }
            ]
          },
          "last_updated": "2022-05-24T17:41:59.078Z"
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.SecretsConfigDump",
      "static_secrets": [],
      "dynamic_active_secrets": [
        {
          "name": "default",
          "secret": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret",
            "name": "default",
            "tls_certificate": {
              "certificate_chain": {
                "inline_bytes": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURQRENDQWlTZ0F3SUJBZ0lRTFNLbTFVWFVPWm5FdlllbjNLUWw4REFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJeU1ETXhOVEExTVRJeU1sb1hEVEl5TURNeApOakExTVRReU1sb3dBRENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFOYWFYMzlyCmppRU9pU3plK0hlSm42dmJxMnhHQW1aNEdHS04rQXZzWnMrbEIza3dmOXhZaWh5WHlIcHpXZ2VuRy9pazl3dGMKYTNURWZiMktZMVBIWXRzK2JtV2pwcU8xY2xacFNib1ZQWCtMYllsQmFSeDhVZWo5bENxOXJxRWVoTkt5K3A [...]
              },
              "private_key": {
                "inline_bytes": "[redacted]"
              }
            }
          },
          "last_updated": "2022-05-24T17:41:59.078Z"
        }
      ],
      "dynamic_warming_secrets": [
        {
          "name": "ROOTCA",
          "last_updated": "2022-03-15T05:14:22.868Z",
          "secret": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret",
            "name": "ROOTCA",
            "validation_context": {
              "trusted_ca": {
                "inline_bytes": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQUtiK3haaWRxNm0xRW5ZaU5ZbFVwVmN3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU1qQXpNVFV3TlRFeE1UWmFGdzB6TWpBegpNVEl3TlRFeE1UWmFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRFJZUTVaMDBpODFXZkMxeWZmenRZYW5heVN1N2JuQk9wRENrbTcKOWs2bk5QcGdZbkVlN1NUMy9pdTdMSFFiNG83SkpRZ1ZGYTVoTjdwamtUdEFNdWRObHFQcjRKeUgrNHQ1NEc [...]
              }
            }
          }
        }
      ]
    }
  ]
}
